@@ -304,12 +304,11 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
                     <configuration>
+                       <fork>true</fork>
                         <compilerArgs>
                             <arg>--enable-preview</arg>
                         </compilerArgs>
                         <parameters>true</parameters>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
                         <encoding>UTF-8</encoding>
                         <release>${java.version}</release>
                     </configuration>
@@ -339,8 +338,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.2</version>
                     <configuration>
-                        <argLine>-J--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                        <argLine>--enable-preview</argLine>
+                        <argLine>--illegal-access=permit  --enable-preview</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
